--- a/doc/tutorial/supercell_tutorial.tex
+++ b/doc/tutorial/supercell_tutorial.tex
@@ -49,7 +49,7 @@ In the tutorial we discuss technical details of the \sups{} program use. All the
 
 \subsection*{Basic functionality: \ce{Ca2Al2SiO7}.}
 
-To understand how the \sups{} program works it is necessary to know the structure of Crystallographic Information File (CIF), which used both as the output and input formats. (The conversion to a number of other format is made very easy by the OpenBabel library, which is used by the program). The CIF file is a standard text file format for representing crystallographic information. The format promulgated by the International Union of Crystallography (IUCr) and the detailed information about it can be found at IUCr site (\url{http://www.iucr.org/})
+To understand how the \sups{} program works it is necessary to know the structure of Crystallographic Information File (CIF), which is used as both the output and input formats. (The conversion to a number of other format is made very easy by the OpenBabel library, which is used by the program). The CIF file is a standard text file format for representing crystallographic information. The format promulgated by the International Union of Crystallography (IUCr) and the detailed information about it can be found on IUCr site (\url{http://www.iucr.org/})
 
 The structure of the sections of a CIF file relevant to our program will be illustrated with the \linebreak \clic{Ca2Al2SiO7.cif} file located in the \path{supercell/data/example} folder. 
 
@@ -100,7 +100,7 @@ O3   0.08720 0.17060 0.80330 1.00000
 
 The file consists of cell and spacegroup information at lines 2-21 (required by \sups{}), atoms charges (lines 22-30, optional) and atomic positions (lines 32-43, required). The partial occupancies of some sites (last column in lines 32-43) are a feature specific to disordered crystals. In the case presented here, partial occupancies are found for AlT2 and SiT2 sites, which are highlighted above. Both correspond to the same crystallographic position and will therefore be assigned to a single group by the \sups{} program. All other sites are fully occupied and will remain as such throughout the procedure.
 
-The \sups{} program is a user-friendly command-line software. It can be directly applied to cif files. Let us use it for an \clic{Ca2Al2SiO7.cif} file in 
+The \sups{} program is a user-friendly command-line software. It can be directly applied to CIF files. Let us use it for an \clic{Ca2Al2SiO7.cif} file in 
 \path{supercell/data/examples} folder.
 \begin{Verbatim}[breaklines]
 supercell -d -i Ca2Al2SiO7.cif -m
@@ -177,9 +177,9 @@ The total number of combinations is 6
 Combinations after merge: 2
 \end{minted}
 
-The program output gives an information about the initial and supercell system sizes, the total charge, and the chemical formula. The information about atomic species properties in the system are summarized in the table (lines 21-32). The multiplicity parameter is calculated using the symmetry information and atomic positions. The total charge is calculated using \path{_atom_type_oxidation_number} data in the CIF file or user-defined charges, specified with commands of the type:
+The program output gives information about the initial and supercell system sizes, the total charge, and the chemical formula. The information about atomic species properties in the system are summarized in the table (lines 21-32). The multiplicity parameter is calculated using the symmetry information and atomic positions. The total charge is calculated using \path{_atom_type_oxidation_number} data in the CIF file or user-defined charges, specified with commands of the type:
 \clic{-p "Ca1:c=+2" -p "O1:c=-2"...}
-See the manual and other examples below for more information on the \clic{-p} option. The information about the total number of combinations is presented at line 64. The last two lines (66-67) appear only when the \clic{-m} option is present in the command line. 
+See the manual and other examples below for more information on the \clic{-p} option. The information about the total number of combinations is presented in line 64. The last two lines (66-67) appear only when the \clic{-m} option is present in the command line. 
 
 To generate structures for cell $1\times1\times2$ (the example presented in the main paper), the \sups{} program should be run with the following parameters:
 \begin{Verbatim}[breaklines]
@@ -189,13 +189,13 @@ where the supercell size is controlled by the \clic{-s} option (with ``x'' lette
 
 \subsection*{Sampling methods: \ce{Ca2Al2SiO7}.}
 
-The number of combinations increases extremely rapidly with the number of atoms in the supercell (see main text and table~\ref{tab:FeSbO4} for example). In the case of the \ce{Ca2Al2SiO7} compound, the number of unique combinations for a $2\times2\times2$ supercell will be \num{9402622} which is too high to process and store, such that sampling is required. \Sups{} offers a few methods of sampling. All of them are controlled by the \clic{-n <type><number>} option, where \clic{<type>} is a letter that determines the sampling method (\clic{r} for random, \clic{l} or \clic{h} for lowest- or highest-$E\_C$ structures, \clic{f} or \clic{a} for first or last-generated generated configurations) and \clic{<number>} is the number of sampled configurations. To get \num{100} configurations picked randomly for the supercell $2\times2\times2$ the program should be executed with the following parameters:
+The number of combinations increases extremely rapidly with the number of atoms in the supercell (see main text and table~\ref{tab:FeSbO4} for example). In the case of the \ce{Ca2Al2SiO7} compound, the number of unique combinations for a $2\times2\times2$ supercell will be \num{9402622} which is too high to process and store, therefore sampling is required. \Sups{} offers a few methods of sampling. All of them are controlled by the \clic{-n <type><number>} option, where \clic{<type>} is a letter that determines the sampling method (\clic{r} for random, \clic{l} or \clic{h} for lowest- or highest-$E\_C$ structures, \clic{f} or \clic{a} for first or last-generated generated configurations) and \clic{<number>} is the number of sampled configurations. To get \num{100} configurations picked randomly for the supercell $2\times2\times2$ the program should be executed with the following parameters:
 \begin{Verbatim}[breaklines]
 supercell -i Ca2Al2SiO7.cif -s 2x2x2 -m -n r100 -v 2 -o Ca2Al2SiO7_r100
 \end{Verbatim}
 The option \clic{-v 2} switches the verbosity to level 2, to follow the program execution, this example being time consuming.
 
-Increasing the supercell size to $2\times2\times3$ gives a total number of combinations around $3.2 \times 10^{13}$. This number is too high to be treated by \sups{} directly, but some of random configurations can nevertheless be created with our program, even for such big system. To perform the operation, the initial file should be processed with \sups{} program first.
+Increasing the supercell size to $2\times2\times3$ gives a total number of combinations around $3.2 \times 10^{13}$. This number is too high to be treated by \sups{} directly, but some of random configurations can nevertheless be created with our program, even for such a big system. To perform the operation, the initial file should be processed with \sups{} program first.
 \begin{Verbatim}[breaklines]
 supercell -i Ca2Al2SiO7.cif -p "*:fixed" && mv supercell_i0.cif Ca2Al2SiO7_abg.cif
 \end{Verbatim}
@@ -205,7 +205,7 @@ rm Ca2Al2SiO7_step*.cif
 supercell -i Ca2Al2SiO7_abg.cif -s 2x2x3 -p "*T2b:fixed" -n r1 -o Ca2Al2SiO7_step1 
 supercell -i Ca2Al2SiO7_step1_ir*.cif -n r1 -o Ca2Al2SiO7_step2
 \end{Verbatim}
-The first \sups{} execution generates one random structure (with \clic{-n r1}) within the T2a group, leaving T2b group partially occupied (\clic{-p "*T2b:fixed"}). The next command generates a random configuration within the T2b group, based on the previously-generated file (\clic{Ca2Al2SiO7_step1_ir*.cif}). Strictly speaking, the generated structure is nearly random, not fully. The splitting of T2 group to T2a and T2b imposes a occupancy restriction of this groups, 12 atoms of Al and 12 atoms of Si in each group. The restriction can be overcome to some extent by setting the number of Al and Si atoms for each group manually with \clic{-p} command. The parameter is discussed below.
+The first \sups{} execution generates one random structure (with \clic{-n r1}) within the T2a group, leaving T2b group partially occupied (\clic{-p "*T2b:fixed"}). The next command generates a random configuration within the T2b group, based on the previously-generated file (\clic{Ca2Al2SiO7_step1_ir*.cif}). Strictly speaking, the generated structure is nearly random, not fully. The splitting of T2 group to T2a and T2b imposes an occupancy restriction of this groups, 12 atoms of Al and 12 atoms of Si in each group. The restriction can be overcome to some extent by setting the number of Al and Si atoms for each group manually with \clic{-p} command. The parameter is discussed below.
 
 \subsection*{Disorder exploration in \ce{FeSbO4}: Comparison with SOD code.}
 
@@ -219,20 +219,20 @@ The \ce{FeSbO4} system was explored with the SOD program in ref. \cite{Grau2007}
 \centering
 \begin{tabular}{|x{2.0cm}|x{2.3cm}|x{2.3cm}|x{2.3cm}|x{2.3cm}|}
 \hline
-Cell, $a\times~b~\times~c$ & Number of symmetry operations & Total number of configurations & Number of unique configurations &  \sups{}/SOD run time \\
+Cell, $a\times~b~\times~c$ & Number of symmetry operations & Total number of configurations & Number of unique configurations &  \sups{}/SOD run time\textsuperscript{**} \\
 \hline 
- ~$1\times 1 \times 1$\textsuperscript{*} & 16  & 2                   & 1     & \textless~1~s \\
- ~$1\times 1 \times 2$\textsuperscript{*} & 32  & 6                   & 2     & \textless~1~s \\
- ~$1\times 1 \times 3$\textsuperscript{*} & 48  & 20                  & 3     & \textless~1~s \\
- ~$1\times 1 \times 4$\textsuperscript{*} & 64  & 70                  & 8     & \textless~1~s \\
- ~$2\times 2 \times 1$\textsuperscript{*} & 64  & 70                  & 7     & \textless~1~s \\
- ~$2\times 2 \times 2$\textsuperscript{*} & 128 & 12870               & 180   & 1~s/8.0~s \\
-$2\times 2 \times 3$                      & 192 & 2704156             & 15565 & 7.5~s/7~days \\
-$2\times 3 \times 3$                      & 144 & ~$9\cdot 10^9$      & N/A   & N/A      \\
-$3\times 3 \times 3$                      & 432 & ~$1.9\cdot 10^{15}$ & N/A   & N/A      \\
+ ~$1\times 1 \times 1$\textsuperscript{*} & 16  & 2                   & 1        & \textless~1~s \\
+ ~$1\times 1 \times 2$\textsuperscript{*} & 32  & 6                   & 2        & \textless~1~s \\
+ ~$1\times 1 \times 3$\textsuperscript{*} & 48  & 20                  & 3        & \textless~1~s \\
+ ~$1\times 1 \times 4$\textsuperscript{*} & 64  & 70                  & 8        & \textless~1~s \\
+ ~$2\times 2 \times 1$\textsuperscript{*} & 64  & 70                  & 7        & \textless~1~s \\
+ ~$2\times 2 \times 2$\textsuperscript{*} & 128 & 12870               & 180      & \textless~1~s/8.0~s \\
+$2\times 2 \times 3$                      & 192 & 2704156             & 15565    & \textless~1~s/7~days \\
+$2\times 3 \times 3$                      & 144 & ~$9\cdot 10^9$      & 63075916 & 142.67~s/crash      \\
+$3\times 3 \times 3$                      & 432 & ~$1.9\cdot 10^{15}$ & N/A      & $\approx$ 1y/--- \\
 \hline
-\multicolumn{5}{y{11.5cm}}{\footnotesize{\textsuperscript{*}The data is also presented in table~1 in ref. \cite{Grau2007} and fully agrees with \sups{} results.}} \\
-%\multicolumn{5}{l}{\footnotesize{\textsuperscript{**} The results are also presented in table 1 paper\cite{Grau2007} and fully agree with \sups{} results.}} \\
+\multicolumn{5}{y{12.5cm}}{\footnotesize{\textsuperscript{*}The data is also presented in table~1 in ref. \cite{Grau2007} and fully agrees with \sups{} results.}} \\
+\multicolumn{5}{y{12.5cm}}{\footnotesize{\textsuperscript{**}Supercell performance mesuared using Intel\textsuperscript{\textregistered} Xeon\textsuperscript{\texttrademark} CPU 2.20~GHz under KVM virtual machine with 8 cores available.}} \\
 \end{tabular}
 \label{tab:FeSbO4}
 \end{table}
@@ -241,7 +241,7 @@ The \sups{} command whose output is used to generate a row (for example for supe
 \begin{Verbatim}[breaklines]
   supercell -d -i FeSbO4.cif -s 2x2x1 -m 
 \end{Verbatim}
-where \texttt{-d} (\texttt{--dry-run}) options switches the program to dry-run mode (no output-file generation), \clic{-i} (\clic{--input}) must be followed by the input file name (required), \clic{-s} (\clic{--cell-size}) sets the cell size in format \texttt{AxBxC}, where \texttt{A}, \clic{B} and \clic{C} are positive integer numbers.
+where \texttt{-d} (\texttt{--dry-run}) option switches the program to dry-run mode (no output-file generation), \clic{-i} (\clic{--input}) must be followed by the input file name (required), \clic{-s} (\clic{--cell-size}) sets the cell size in format \texttt{AxBxC}, where \texttt{A}, \clic{B} and \clic{C} are positive integer numbers.
 
 Table~\ref{tab:FeSbO4} can be generated automatically (except information about SOD run time) with the script \linebreak \path{df_chg.bash} in \path{supercell/data/examples/FeSbO4} folder. The output of \sups{} is parsed during the execution of the script to extract the relevant information.
 
@@ -253,7 +253,7 @@ As mentioned above this example does not generate output structures. To do so, t
 
 \subsection*{Coulomb energy calculations in $\gamma$-\ce{Fe2O3}.}
 
-The case of the $\gamma$-\ce{Fe2O3} system, investigated in ref. \cite{Grau2010}, was also examined. The input structure with name \clic{Fe2O3-P4332.cif} can be found in folder \path{supercell/data/examples/gamma-Fe2O3/}. Detailed information about the configurations and their degeneracies was presented therein for a supercell $1\times1\times3$ of $\gamma$-\ce{Fe2O3}, all of which were perfectly reproduced by the \sups{} program.\footnote{Table~2 in~\cite{Grau2010} has a mistyping: L1L3L5L10 degeneracy should be 24 and space group for configuration L1L2L4L5 should be \textit{C2}.}. Among other things, the correlation between total and Coulomb energies was examined in their paper. It was shown that, at least for this particular system, a quite strong correlation is obtained, such that Coulomb energy can be used to approximate the total energy with a reasonable precision. Electrostatic energies can be calculated directly with \sups{}, provided charges are provided for all sites in the CIF input file (with tag \clic{_atom_type_oxidation_number}) and/or in the command line. The following command should be used to calculate the electrostatic energy of all explored unique configurations for supercell size $1\times1\times3$ (examined in ref. \cite{Grau2010}):
+The case of the $\gamma$-\ce{Fe2O3} system, investigated in ref. \cite{Grau2010}, was also examined. The input structure with name \clic{Fe2O3-P4332.cif} can be found in folder \path{supercell/data/examples/gamma-Fe2O3/}. Detailed information about the configurations and their degeneracies was presented therein for a supercell $1\times1\times3$ of $\gamma$-\ce{Fe2O3}, all of which were perfectly reproduced by the \sups{} program.\footnote{Table~2 in~\cite{Grau2010} has a mistyping: L1L3L5L10 degeneracy should be 24 and space group for configuration L1L2L4L5 should be \textit{C2}.}. Among other things, the correlation between total and Coulomb energies was examined in their paper. It was shown that, at least for this particular system, a quite strong correlation is obtained, such that Coulomb energy can be used to approximate the total energy with a reasonable precision. Electrostatic energies can be calculated directly with \sups{}, provided charges are specified for all sites in the CIF input file (with tag \clic{_atom_type_oxidation_number}) and/or in the command line. The following command should be used to calculate the electrostatic energy of all explored unique configurations for supercell size $1\times1\times3$ (examined in ref. \cite{Grau2010}):
 \begin{Verbatim}[breaklines]
   mkdir cell113_out/
   supercell -i Fe2O3-P4332.cif -s 1x1x3 -m -q -v 2 -o cell113_out/cell113 
@@ -264,18 +264,18 @@ We can go further and explore the cell $1\times2\times3$ of $\gamma$-\ce{Fe2O3}.
 \begin{Verbatim}[breaklines]
   supercell -d -i Fe2O3-P4332.cif -s 1x2x3 -m -v 2 
 \end{Verbatim}
-provides information on the total number of combinations \num{735471} and the number of unique ones \num{30834}. The number of configurations is too high to process them all, but they can nevertheless be sampled. The random sampling was discussed above. Here we also extract the structures with lowest (\clic{-n l<number>}) and highest (\clic{-n h<number>}) electrostatic-energies. All possible samplings can be done simultaneously. 
+provides information on the total number of combinations \num{735471} and the number of unique ones as \num{30834}. The number of configurations is too high to process them all, but they can nevertheless be sampled. The random sampling was discussed above. Here we also extract the structures with lowest (\clic{-n l<number>}) and highest (\clic{-n h<number>}) electrostatic-energies. All possible samplings can be done simultaneously. 
 \begin{Verbatim}[breaklines]
   mkdir cell123_out/
   supercell -i Fe2O3-P4332.cif -s 1x2x3 -v 2 -m -q -n l50 -n r100 -n h20 -o cell123_out/cell123
 \end{Verbatim}
 Options \clic{-n l50}, \clic{-n h20} and \clic{-n r100} forces program to output only the 50 structures with lowest Coulomb energy, the first 20 structures with highest Coulomb energy and 100 random structures, respectively. The \clic{-q} option is of course mandatory to perform such Coulomb-energy-based samplings.
 
-It is important to keep in mind that the output text file \clic{cell123_coulomb_energy.txt} will list the Coulomb energies of all configurations, and not only of the sampled. If you are not interested in all configurations energies, but only in the sampled one, you can find useful files \clic{cell123_coulomb_energy_r.txt}, \clic{cell123_coulomb_energy_l.txt}, and \clic{cell123_coulomb_energy_h.txt}, which lists only the Coulomb energies of configurations sampled with each method. The most of the popular filesystems, has a significant performance degradation, when the total number of file in the folder more than \num{10000}. To overcome this limitation, the archiving option (\clic{-a}), which will automatically compress the output files, can be used.
+It is important to keep in mind that the output text file \clic{cell123_coulomb_energy.txt} will list the Coulomb energies of all configurations, and not only of the sampled. If you are not interested in energies of all configurations, but only in the sampled one, you can find useful files \clic{cell123_coulomb_energy_r.txt}, \clic{cell123_coulomb_energy_l.txt}, and \clic{cell123_coulomb_energy_h.txt}, which list only the Coulomb energies of configurations sampled with each method. Most of the popular filesystems, have a significant performance degradation, when the total number of file in the folder is more than \num{10000}. To overcome this limitation, the archiving option (\clic{-a}), which will automatically compress the output files, can be used.
 \begin{Verbatim}[breaklines]
   supercell -i Fe2O3-P4332.cif -s 1x2x3 -m -q -v 2 -o Fe2O3/cell123 -a Fe2O3_cell123.zip
 \end{Verbatim}
-This run of \sups{} compress all the output files (except \clic{cell123_coulomb_energy.txt}) to \path{Fe2O3_cell123.zip} archive. The files will be located in the folder \path{Fe2O3} within this archive. The name of the files will start from \path{cell123}. The possible file formats \path{.zip}, \path{.tar}, \path{.tgz}, \path{.tar.gz}, \path{.tar.bz2} and \path{.tar.xz} should be specified like an extension of archive file. The parameter is optional and requires \textit{libarchive} installed, during program compilation.
+This run of \sups{} compresses all the output files (except \clic{cell123_coulomb_energy.txt}) to \path{Fe2O3_cell123.zip} archive. The files will be located in the folder \path{Fe2O3} within this archive. The name of the files will start from \path{cell123}. The possible file formats \path{.zip}, \path{.tar}, \path{.tgz}, \path{.tar.gz}, \path{.tar.bz2} and \path{.tar.xz} should be specified like an extension of archive file. The parameter is optional and requires \textit{libarchive} installed, during program compilation.
 
 
 \subsection*{\Sups{} program verification on the $\alpha$-\ce{Si_xGe_{1-x}O2} system}
@@ -292,15 +292,15 @@ Another verification was done by comparison with data published on \ce{Cu2ZnSnS_
 \begin{Verbatim}[breaklines]
   supercell -i stannite.cif -s 1x1x1 -p "S:p=3" -p "Se:p=5" -m -o <output_directory>/stannite
 \end{Verbatim}
-in which, as in the previous example, the \texttt{<output\_directory>} is created before the command is run and the populations of S and Se atoms on crystallographic sites ``S'' and ``Se'' are specified with the \clic{-p} option. It is important to keep in mind that ``S'' and ``Se'' in ``S:p=3'' and ``Se:p=5'' arguments refer to the \textit{crystallographic labels} as they are degined in the CIF file rather than to atom symbols (more typical labels would be of the form ``S1'' and ``Se1''). The multiplicity of these overlapping sites in the cell being 8 and the supercell size being $1\times1\times1$, the population values ``p'' should obey $0 \leq p(\text{S})\leq 8$ and $p(\text{Se}) + p(\text{S})=8$.
+in which, as in the previous example, the \texttt{<output\_directory>} is created before the command is run and the populations of S and Se atoms on crystallographic sites ``S'' and ``Se'' are specified with the \clic{-p} option. It is important to keep in mind that ``S'' and ``Se'' in ``S:p=3'' and ``Se:p=5'' arguments refer to the \textit{crystallographic labels} as they are defined in the CIF file rather than to atom symbols (more typical labels would be of the form ``S1'' and ``Se1''). The multiplicity of these overlapping sites in the cell being 8 and the supercell size being $1\times1\times1$, the population values ``p'' should obey $0 \leq p(\text{S})\leq 8$ and $p(\text{Se}) + p(\text{S})=8$.
 
 \subsection*{\Sups{} program verification on piezoelectric ceramics \ce{PbZr_{x}Ti_{1-x}O3} (PZT).}
 
-Disorder in piezoelectric ceramics can be also processed with \sups{} program. The well-known \ce{PbZr_{x}Ti_{1-x}O3} (PZT) ceramics are a particularly interesting because of the displacement disorder on the Pb position, which is induced by \ce{Zr-Ti} substitution and crucially affects its electric and mechanical properties. The example described here is based on Ref. \cite{Grinberg2004}, where authors used DFT calculations to investigate the correlation between substitution ordering in supercell models and the physical properties of the system. They used in this particular case a strongly anisotropic $4\times2\times1$ supercell of composition \ce{PbZr_{0.5}Ti_{0.5}O3}. The approximations leads to 10 symmetry unique configurations, which were all presented in the paper. They can be easily be generated with the \sups{} program embedded in a simple script \clic{df_cfg.bash} located in \clic{supercell/data/examples/PZT/} folder. We note that the order of configurations differs in the script and in the paper. The command line used in this script is:
+Disorder in piezoelectric ceramics can be also processed with \sups{} program. The well-known \ce{PbZr_{x}Ti_{1-x}O3} (PZT) ceramics is particularly interesting because of the displacement disorder on the Pb position, which is induced by \ce{Zr-Ti} substitution and crucially affects its electric and mechanical properties. The example described here is based on Ref. \cite{Grinberg2004}, where authors used DFT calculations to investigate the correlation between substitution ordering in supercell models and the physical properties of the system. They used in this particular case a strongly anisotropic $4\times2\times1$ supercell of composition \ce{PbZr_{0.5}Ti_{0.5}O3}. The approximations leads to 10 symmetry unique configurations, which were all presented in the paper. They can be easily generated with the \sups{} program embedded in a simple script \clic{df_cfg.bash} located in \clic{supercell/data/examples/PZT/} folder. We note that the order of configurations differs in the script and in the paper. The command line used in this script is:
 \begin{Verbatim}[breaklines]
   supercell  -s 4x2x1 -i PZT-PbZr05Ti05O3.cif -m -o <output_directory>/PZT421
 \end{Verbatim}
-Using the \sups{} program makes it possible to proceed with larger supercell sizes $4\times2\times2$ and $4\times3\times2$, yielding 490 and 29606 unique configurations, respectively. The second case may be difficult to process, but the first one is absolutely feasible. Such supercell size allow to research structure distortion in z-dimension also.
+Using the \sups{} program makes it possible to proceed with larger supercell sizes $4\times2\times2$ and $4\times3\times2$, yielding 490 and 29606 unique configurations, respectively. The second case may be difficult to process, but the first one is absolutely feasible. Such supercell size allows to research structure distortion in z-dimension also.
 
 \subsection*{Disorder in \ce{Pb_{0.5}Sn_{0.5}Te}: calculation of atom-pair correlation functions}
 The purpose of this section is to describe the procedure and results of the exploration of the \ce{Pb_{0.5}Sn_{0.5}Te} system discussed in the main text, in which we use the \sups{} program combined with a structure-analysis tool (the GULP program) to calculate atom-pair correlation functions. These functions are then used to evaluate to what extent the generated structures are representative of random Pb/Se disorder through their adequacy with Special-Quasirandom-Structure (SQS) character\cite{Zunger1990}.
@@ -335,13 +335,13 @@ As mentioned in the main text, the ordering of H atoms in this system is governe
 \end{Verbatim}
 where the partial occupancies on both sites are kept fixed. (This step could of course alternatively be done with any program for the visualization of crystallographic structures.) The output structure is shown on fig.~\ref{fig:iceIh-adv}. Each oxygen atom is still surrounded by 4 hydrogen positions, strictly two of which should be occupied by H atoms in the end. In the figure, the hydrogen sites are associated with different O atoms marked with different colors. The H atom labels are then changed manually in the same way as the color code, ensuring that (i) all hydrogen positions attached to the same O atom have the same label and that (ii) hydrogen atoms positions associated with different O atoms have different labels (ex. H1, H2, H3, etc).
 
-Importantly, the \sups{} program will associate sites with identical crystallographic labels within a common group (as defined in the main text), such that a run with this customized file (\path{supercell/data/examples/ice-Ih-adv/ice-Ih-121-adv.cif}) as an input gives 8 groups with $C^2_4=6$ combinations each, which yields a total of $6^8=$\num{1679616} configurations. The \sups{} command used for this step is the following:
+Importantly, the \sups{} program will associate sites with identical crystallographic labels within a common group (as defined in the main text), so that a run with this customized file (\path{supercell/data/examples/ice-Ih-adv/ice-Ih-121-adv.cif}) as an input gives 8 groups with $C^2_4=6$ combinations each, which yields a total of $6^8=$\num{1679616} configurations. The \sups{} command used for this step is the following:
 \begin{Verbatim}[breaklines]
   supercell -i ice-Ih-121-adv.cif -m -q -p "O:c=-2" -p "H*:c=+1" -p "r(H[5-8]):fixed" -o <output_directory>/ice-Ih-l1
 \end{Verbatim}
 where the \clic{-p --property} option is first used to set the charges (\clic{<label>:c=<charge_value>}) of O and H crystallographic sites for the Coulomb energy calculation (\clic{-q} option). The ``\clic{H*}'' notation here sets the specified charge to all sites starting with ``H''. The \clic{-p} option is then used again to fix the partial occupancies of H sites labelled ``H5'' to ``H8'' with the notation ``\clic{r(H[5-8]):fixed}'', which excludes these sites from the permutation. Here the ``r'' means that the expression inside the parentheses should be interpreted like a Perl regular expression (RegEx). A description of the corresponding syntax can be found at \url{http://en.wikipedia.org/wiki/Regular_expression}. More information on these wild cards and other advanced text search functionalities to set the properties of several crystallographic sites are provided in the manual (\clic{man supercell}). By comparison, applying the \sups{} program to the same supercell size with the original grouping gives a total of \num{189290920} configurations, which is approximately one hundred times more than with the customized CIF file.
 
-This new group assignment not only solves the problem of the O coordination, but also splits the 32 H positions into 8 groups of sites. The number of configurations (1.6~million) is still very high to generate them all simultaneously, but the process can be done step-by-step. We note that such a number of configurations is not a problem for the\sups{} algorithm, which can deal with up to $8\times{10^8}$ configurations, but for storage and data analysis (by the GULP program). 4 out of 8 groups can be fixed in a first step to generate 656 (after symmetry merging) output structures. These files can then be analyzed to exclude those with \ce{H-H} close contact. Only valid structures are kept for the next step, where they are used as new inputs for the \sups{} program, with the command:
+This new group assignment not only solves the problem of the O coordination, but also splits the 32 H positions into 8 groups of sites. The number of configurations (1.6~million) is still very high to generate them all simultaneously, but the process can be done step-by-step. We note that such a number of configurations is not a problem for the \sups{} algorithm, which can deal with up to ${10^16}$ configurations, but it is a problem for storage and data analysis (by the GULP program). 4 out of 8 groups can be fixed in a first step to generate 656 (after symmetry merging) output structures. These files can then be analyzed to exclude those with \ce{H-H} close contact. Only valid structures are kept for the next step, where they are used as new inputs for the \sups{} program, with the command:
 \begin{Verbatim}[breaklines]
   supercell -i <new_input_structure> -m -q -p "O:c=-2" -p "H*:c=+1"  -o <output_directory>/<prefix>
 \end{Verbatim}
@@ -352,9 +352,9 @@ The directories and files created for this example by the script: \clic{df_cfg.b
  \item \clic{ice-Ih-121-adv.cif}: the starting structure, based on a $1\times2\times1$ supercell of the original ice \ce{I_h} structure, with labels modified as described above.
  \item \clic{ice-Ih.gin_template}: contains the input-file template for the structure analysis performed with Gulp, which lists inter-atomic distances and is parsed to locate H-H close contacts and check the O-atom coordination.
  \item \clic{ice-Ih-cfgs-l1/}: contains partially-disordered configurations files with names \path{ice-Ih-l1_i<index>_w<weight>.cif}, in which permutations were treated on groups of H sites H1 to H4, but where partial occupancies were kept on groups H5 to H8. Each structure is associated with a folder (\path{ice-Ih-cfgs-l1/ice-Ih-l1_i<index>_w<weight>/gulp/}) which contains the output of the structure analysis performed with the GULP program.
- \item \clic{ice-Ih-cfgs-l2/}: Contains copies the structures satisfying both restrictions on the local structure (no \ce{H-H} close contact and 2-coordinated O) among those obtained during the first step. Each of these structures are then associated with directories of the type:
+ \item \clic{ice-Ih-cfgs-l2/}: Contains copies of the structures satisfying both restrictions on the local structure (no \ce{H-H} close contact and 2-coordinated O) among those obtained during the first step. Each of these structures are then associated with directories of the type:
  \item \clic{ice-Ih-cfgs-l2/ice-Ih-l1_i<index>_w<weight>/} which contains the structures generated by the second run of the algorithm, where the remaining disordered sites (H5 to H8) are treated. These structures are named \path{ice-Ih-l1_i<step1_index>_w<step1_weight>-l2_i<step2_index>w_<step2_weight>.cif} and are again associated with all folder (same name without the extension) containing the result of the structure analysis.  
- \item \clic{ice-Ih-cfgs-final/}: contains the final selection of structures with disorder in all H sites treated, and which satisfy both structure-restriction conditions.
+ \item \clic{ice-Ih-cfgs-final/}: contains the final selection of structures where disorder in all H sites is treated, and which satisfy both structure-restriction conditions.
 \end{itemize}
 
 \subsection*{Application of \sups{} program to Rb-PST-1 zeolite.}
@@ -389,25 +389,25 @@ Program extra options & Approx cell size,~\AA & Total number of configurations &
 \label{tab:Rb-PST-1-run}
 \end{table} 
 
-As you can see from the table, the cell $1\times1\times1$ has only 6~\AA{} in \textit{z}-direction, therefore periodic effects can be strong. Increasing the cell twice along the direction will decrease the effects, but the number of permutation ($\approx4.0\cdot10^{12}$) is too high to process with ``brute-force'' approach. implemented in \sups{} program. the most easy way to decrease the number is to completely remove Rb2 site, but this will change the charge neutrality of the system. Therefore, Si/Ga ratio should be also adjusted. After the manipulation, the number of permutations is still higher, than the program can process, but it can be processed in two steps. At first step, (Si/Ga)1 site should be fixed. The number of SIC configuration, obtained by permutations of (Si/Ga)2 site is 8 (70 total). At second step, this 8 structures use like an input for next supercell program run:
+As you can see from the table, the cell $1\times1\times1$ has only 6~\AA{} in \textit{z}-direction, therefore periodic effects can be strong. Increasing the cell twice along the direction will decrease the effects, but the number of permutation ($\approx4.0\cdot10^{12}$) is too high to process with ``brute-force'' approach. implemented in \sups{} program. the most easy way to decrease the number is to completely remove Rb2 site, but this will change the charge neutrality of the system. Therefore, Si/Ga ratio should be also adjusted. After the manipulation, the number of permutations is still higher, than the program can process, but it can be processed in two steps. At first step, (Si/Ga)1 site should be fixed. The number of SIC configuration, obtained by permutations of (Si/Ga)2 site is 8 (70 total). At second step, these 8 structures are used like an input for next supercell program run:
 \begin{Verbatim}[breaklines]
   supercell -i <first_step_cif_file> -v 2 -q -p "Si*:c=4" -p "Ga*:c=3" -p "Rb*:c=1" -p "O*:c=-2" -o <output_file_prefix> -n r5000 -n l1000 -n h1000
 \end{Verbatim}
 
 The run generates text file with electrostatic energy of all possible structures, \num{5000} random structures, and \num{1000} structures with lowest and highest energy each. The following analysis of surrounding and connectivity were done with ``in-house'' software. Manual charge settings is needed for Coulomb
 
-The \clic{RB-PST-1-DEHY_1_new.cif} file and script (\clic{df_cfg.bash}) for structure generation you can find in \path{supercell/data/example/Rb-PST-1} folder. The structure generation will take around one hour on 8 cores workstation and up to ten hours on netbook. It will also requires a several gigabytes of storage space to write Coulomb energy for all possible structures.
+The \clic{RB-PST-1-DEHY_1_new.cif} file and script (\clic{df_cfg.bash}) for structure generation you can find in \path{supercell/data/example/Rb-PST-1} folder. The structure generation will take around one hour on 8 cores workstation and up to ten hours on netbook. It will also require a several gigabytes of storage space to write Coulomb energy for all possible structures.
 
 
 \section*{\Sups{} program integration to research process.}
-Our program is ``link in chain'' and the efficiency of the research process, obviously, depend on another links and connection between them. Below, there is a list of the programs/resources (in addition to discussed in the main paper), which can be possibly used with supercell program in disorder compound research.
+Our program is ``link in chain'' and the efficiency of the research process, obviously, depends on another links and connection between them. Below, there is a list of the programs/resources (in addition to discussed in the main paper), which can be possibly used with supercell program in disorder compound research.
 \begin{description}
-  \item[ASE] (\url{https://wiki.fysik.dtu.dk/ase/}). Atomic Simulation Environment is another set of python tool for setting up, manipulating, running, visualizing and analyzing atomistic simulations. Support many calculation software, both classical and \textit{ab-initio}, including CASTEP and VASP. 
+  \item[ASE] (\url{https://wiki.fysik.dtu.dk/ase/}). Atomic Simulation Environment is another set of python tool for setting up, manipulating, running, visualizing and analyzing atomistic simulations. Supports many calculation software, both classical and \textit{ab-initio}, including CASTEP and VASP. 
   \item[cif2cell] (\url{http://sourceforge.net/projects/cif2cell/}). Cif2cell is a tool to generate an input structure in different formats, like CASTEP, CP2K, CRYSTAL09, Quantum Espresso, VASP and many more. 
-  \item[COD] (\url{http://www.crystallography.net}). Open-access  structural database with more than \num{376300} records (April 2017). 
-  \item[GULP] (\url{http://gulp.curtin.edu.au/}). GULP is force-field program for performing a variety of tasks on a range of system types. It can be useful for optimizations, energy calculation and analysis of the structure.
+  \item[COD] (\url{http://www.crystallography.net}). Open-access  structural database with more than \num{473520} records (May 2021). 
+  \item[GULP] (\url{http://gulp.curtin.edu.au/}). GULP is a force-field program for performing a variety of tasks on a range of system types. It can be useful for optimizations, energy calculation and analysis of the structure.
   \item[EnCIFer] (\url{http://www.ccdc.cam.ac.uk/Community/freeservices/encifer/}). A GUI tool for validating of \sups{} input structures. Useful for draft structures.
-  \item[VESTA] (\url{http://jp-minerals.org/vesta/}). A powerful tool for visualization and editing of crystallographic structures. It supports many input/output format (including cif) and can visualize partially occupied sites.
+  \item[VESTA] (\url{http://jp-minerals.org/vesta/}). A powerful tool for visualization and editing of crystallographic structures. It supports many input/output formats (including cif) and can visualize partially occupied sites.
 \end{description}
 
  
